--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "node-sass": "^7.0.3",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
     "react-hook-form": "^7.43.9",
